--- a/css/materialize.css
+++ b/css/materialize.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Copse");
 .materialize-red { background-color: #e51c23 !important; }
 
 .materialize-red-text { color: #e51c23 !important; }
@@ -92,7 +93,7 @@
 
 .red.accent-4 { background-color: #D50000 !important; }
 
-.red-text.text-accent-4 { color: #D50000 !important; }
+.red-text.text-accent-4, .icon-block .red-text.material-icons { color: #D50000 !important; }
 
 .pink { background-color: #e91e63 !important; }
 
@@ -148,7 +149,7 @@
 
 .pink.accent-4 { background-color: #c51162 !important; }
 
-.pink-text.text-accent-4 { color: #c51162 !important; }
+.pink-text.text-accent-4, .icon-block .pink-text.material-icons { color: #c51162 !important; }
 
 .purple { background-color: #9c27b0 !important; }
 
@@ -204,7 +205,7 @@
 
 .purple.accent-4 { background-color: #aa00ff !important; }
 
-.purple-text.text-accent-4 { color: #aa00ff !important; }
+.purple-text.text-accent-4, .icon-block .purple-text.material-icons { color: #aa00ff !important; }
 
 .deep-purple { background-color: #673ab7 !important; }
 
@@ -260,7 +261,7 @@
 
 .deep-purple.accent-4 { background-color: #6200ea !important; }
 
-.deep-purple-text.text-accent-4 { color: #6200ea !important; }
+.deep-purple-text.text-accent-4, .icon-block .deep-purple-text.material-icons { color: #6200ea !important; }
 
 .indigo { background-color: #3f51b5 !important; }
 
@@ -316,7 +317,7 @@
 
 .indigo.accent-4 { background-color: #304ffe !important; }
 
-.indigo-text.text-accent-4 { color: #304ffe !important; }
+.indigo-text.text-accent-4, .icon-block .indigo-text.material-icons { color: #304ffe !important; }
 
 .blue { background-color: #2196F3 !important; }
 
@@ -372,63 +373,63 @@
 
 .blue.accent-4 { background-color: #2962FF !important; }
 
-.blue-text.text-accent-4 { color: #2962FF !important; }
+.blue-text.text-accent-4, .icon-block .blue-text.material-icons { color: #2962FF !important; }
 
 .light-blue { background-color: #03a9f4 !important; }
 
-.light-blue-text { color: #03a9f4 !important; }
+.light-blue-text, .icon-block .material-icons { color: #03a9f4 !important; }
 
 .light-blue.lighten-5 { background-color: #e1f5fe !important; }
 
-.light-blue-text.text-lighten-5 { color: #e1f5fe !important; }
+.light-blue-text.text-lighten-5, .icon-block .text-lighten-5.material-icons { color: #e1f5fe !important; }
 
 .light-blue.lighten-4 { background-color: #b3e5fc !important; }
 
-.light-blue-text.text-lighten-4 { color: #b3e5fc !important; }
+.light-blue-text.text-lighten-4, .icon-block .text-lighten-4.material-icons { color: #b3e5fc !important; }
 
 .light-blue.lighten-3 { background-color: #81d4fa !important; }
 
-.light-blue-text.text-lighten-3 { color: #81d4fa !important; }
+.light-blue-text.text-lighten-3, .icon-block .text-lighten-3.material-icons { color: #81d4fa !important; }
 
 .light-blue.lighten-2 { background-color: #4fc3f7 !important; }
 
-.light-blue-text.text-lighten-2 { color: #4fc3f7 !important; }
+.light-blue-text.text-lighten-2, .icon-block .text-lighten-2.material-icons { color: #4fc3f7 !important; }
 
 .light-blue.lighten-1 { background-color: #29b6f6 !important; }
 
-.light-blue-text.text-lighten-1 { color: #29b6f6 !important; }
+.light-blue-text.text-lighten-1, .icon-block .text-lighten-1.material-icons { color: #29b6f6 !important; }
 
 .light-blue.darken-1 { background-color: #039be5 !important; }
 
-.light-blue-text.text-darken-1 { color: #039be5 !important; }
+.light-blue-text.text-darken-1, .icon-block .text-darken-1.material-icons { color: #039be5 !important; }
 
 .light-blue.darken-2 { background-color: #0288d1 !important; }
 
-.light-blue-text.text-darken-2 { color: #0288d1 !important; }
+.light-blue-text.text-darken-2, .icon-block .text-darken-2.material-icons { color: #0288d1 !important; }
 
 .light-blue.darken-3 { background-color: #0277bd !important; }
 
-.light-blue-text.text-darken-3 { color: #0277bd !important; }
+.light-blue-text.text-darken-3, .icon-block .text-darken-3.material-icons { color: #0277bd !important; }
 
 .light-blue.darken-4 { background-color: #01579b !important; }
 
-.light-blue-text.text-darken-4 { color: #01579b !important; }
+.light-blue-text.text-darken-4, .icon-block .text-darken-4.material-icons { color: #01579b !important; }
 
 .light-blue.accent-1 { background-color: #80d8ff !important; }
 
-.light-blue-text.text-accent-1 { color: #80d8ff !important; }
+.light-blue-text.text-accent-1, .icon-block .text-accent-1.material-icons { color: #80d8ff !important; }
 
 .light-blue.accent-2 { background-color: #40c4ff !important; }
 
-.light-blue-text.text-accent-2 { color: #40c4ff !important; }
+.light-blue-text.text-accent-2, .icon-block .text-accent-2.material-icons { color: #40c4ff !important; }
 
 .light-blue.accent-3 { background-color: #00b0ff !important; }
 
-.light-blue-text.text-accent-3 { color: #00b0ff !important; }
+.light-blue-text.text-accent-3, .icon-block .text-accent-3.material-icons { color: #00b0ff !important; }
 
 .light-blue.accent-4 { background-color: #0091ea !important; }
 
-.light-blue-text.text-accent-4 { color: #0091ea !important; }
+.light-blue-text.text-accent-4, .icon-block .material-icons { color: #0091ea !important; }
 
 .cyan { background-color: #00bcd4 !important; }
 
@@ -484,7 +485,7 @@
 
 .cyan.accent-4 { background-color: #00b8d4 !important; }
 
-.cyan-text.text-accent-4 { color: #00b8d4 !important; }
+.cyan-text.text-accent-4, .icon-block .cyan-text.material-icons { color: #00b8d4 !important; }
 
 .teal { background-color: #009688 !important; }
 
@@ -540,7 +541,7 @@
 
 .teal.accent-4 { background-color: #00bfa5 !important; }
 
-.teal-text.text-accent-4 { color: #00bfa5 !important; }
+.teal-text.text-accent-4, .icon-block .teal-text.material-icons { color: #00bfa5 !important; }
 
 .green { background-color: #4CAF50 !important; }
 
@@ -596,7 +597,7 @@
 
 .green.accent-4 { background-color: #00C853 !important; }
 
-.green-text.text-accent-4 { color: #00C853 !important; }
+.green-text.text-accent-4, .icon-block .green-text.material-icons { color: #00C853 !important; }
 
 .light-green { background-color: #8bc34a !important; }
 
@@ -652,7 +653,7 @@
 
 .light-green.accent-4 { background-color: #64dd17 !important; }
 
-.light-green-text.text-accent-4 { color: #64dd17 !important; }
+.light-green-text.text-accent-4, .icon-block .light-green-text.material-icons { color: #64dd17 !important; }
 
 .lime { background-color: #cddc39 !important; }
 
@@ -708,7 +709,7 @@
 
 .lime.accent-4 { background-color: #aeea00 !important; }
 
-.lime-text.text-accent-4 { color: #aeea00 !important; }
+.lime-text.text-accent-4, .icon-block .lime-text.material-icons { color: #aeea00 !important; }
 
 .yellow { background-color: #ffeb3b !important; }
 
@@ -764,7 +765,7 @@
 
 .yellow.accent-4 { background-color: #ffd600 !important; }
 
-.yellow-text.text-accent-4 { color: #ffd600 !important; }
+.yellow-text.text-accent-4, .icon-block .yellow-text.material-icons { color: #ffd600 !important; }
 
 .amber { background-color: #ffc107 !important; }
 
@@ -820,7 +821,7 @@
 
 .amber.accent-4 { background-color: #ffab00 !important; }
 
-.amber-text.text-accent-4 { color: #ffab00 !important; }
+.amber-text.text-accent-4, .icon-block .amber-text.material-icons { color: #ffab00 !important; }
 
 .orange { background-color: #ff9800 !important; }
 
@@ -876,7 +877,7 @@
 
 .orange.accent-4 { background-color: #ff6d00 !important; }
 
-.orange-text.text-accent-4 { color: #ff6d00 !important; }
+.orange-text.text-accent-4, .icon-block .orange-text.material-icons { color: #ff6d00 !important; }
 
 .deep-orange { background-color: #ff5722 !important; }
 
@@ -932,7 +933,7 @@
 
 .deep-orange.accent-4 { background-color: #dd2c00 !important; }
 
-.deep-orange-text.text-accent-4 { color: #dd2c00 !important; }
+.deep-orange-text.text-accent-4, .icon-block .deep-orange-text.material-icons { color: #dd2c00 !important; }
 
 .brown { background-color: #795548 !important; }
 
@@ -1060,7 +1061,7 @@
 
 .white { background-color: #FFFFFF !important; }
 
-.white-text { color: #FFFFFF !important; }
+.white-text, .important-header p { color: #FFFFFF !important; }
 
 .transparent { background-color: transparent !important; }
 
@@ -1207,7 +1208,7 @@ html { box-sizing: border-box; }
 
 *, *:before, *:after { box-sizing: inherit; }
 
-button, input, optgroup, select, textarea { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; }
+button, input, optgroup, select, textarea { font-family: Copse, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; }
 
 ul:not(.browser-default) { padding-left: 0; list-style-type: none; }
 ul:not(.browser-default) > li { list-style-type: none; }
@@ -1666,10 +1667,10 @@ nav .input-field label.active i { color: #fff; }
   .navbar-fixed { height: 64px; } }
 a { text-decoration: none; }
 
-html { line-height: 1.5; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; font-weight: normal; color: rgba(0, 0, 0, 0.87); }
-@media only screen and (min-width: 0) { html { font-size: 14px; } }
-@media only screen and (min-width: 992px) { html { font-size: 14.5px; } }
-@media only screen and (min-width: 1200px) { html { font-size: 15px; } }
+html { line-height: 1.5; font-family: Copse, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; font-weight: normal; color: rgba(0, 0, 0, 0.87); }
+@media only screen and (min-width: 0) { html { font-size: 1.2rem; } }
+@media only screen and (min-width: 992px) { html { font-size: 1.2rem; } }
+@media only screen and (min-width: 1200px) { html { font-size: 1.2rem; } }
 
 h1, h2, h3, h4, h5, h6 { font-weight: 400; line-height: 1.3; }
 
@@ -2570,3 +2571,34 @@ input[type=range].focused:focus:not(.active)::-ms-thumb { box-shadow: 0 0 0 10px
   .timepicker-container.modal-content { flex-direction: row; }
   .timepicker-text-container { top: 32%; }
   .timepicker-display-am-pm { position: relative; right: auto; bottom: auto; text-align: center; margin-top: 1.2rem; } }
+nav ul a, nav .brand-logo { color: #444; }
+
+p { line-height: 2rem; }
+
+.sidenav-trigger { color: #26a69a; }
+
+.parallax-container { min-height: 380px; line-height: 0; height: auto; color: rgba(255, 255, 255, 0.9); }
+.parallax-container .section { width: 100%; }
+
+/*
+@media only screen and (max-width : 992px) { .parallax-container .section { position: absolute; top: 40%; } #index-banner .section { top: 10%; }
+}
+
+@media only screen and (max-width : 600px) { #index-banner .section { top: 0; }
+}
+*/
+.icon-block { padding: 0 15px; }
+.icon-block .material-icons { font-size: inherit; }
+
+.parallax img { min-height: 100%; min-width: 100%; }
+
+.navbar-fixed { height: 72px; }
+
+nav { height: 72px; padding: 4px 0; }
+
+#logo-container img { max-height: 64px; max-width: 100%; }
+
+.logo-header img { max-width: 100%; max-height: 300px; }
+
+.important-header { display: flex; justify-content: center; align-items: center; width: 100%; background-color: #b55063; height: 48px; }
+.important-header p { margin: 0; }
