--- a/sass/components/_typography.scss
+++ b/sass/components/_typography.scss
@@ -7,15 +7,15 @@ html{
   line-height: 1.5;
 
   @media only screen and (min-width: 0) {
-    font-size: 14px;
+    font-size: 1.2rem;    // 14px
   }
 
   @media only screen and (min-width: $medium-screen) {
-    font-size: 14.5px;
+    font-size: 1.2rem;  // 14.5px
   }
 
   @media only screen and (min-width: $large-screen) {
-    font-size: 15px;
+    font-size: 1.2rem;    // 15px
   }
 
   font-family: $font-stack;
