--- a/sass/components/_variables.scss
+++ b/sass/components/_variables.scss
@@ -293,8 +293,8 @@ $toast-action-color: #eeff41;
 
 // 20. Typography
 // ==========================================================================
-
-$font-stack: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif !default;
+@import url('https://fonts.googleapis.com/css?family=Copse');
+$font-stack: Copse, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif !default;
 $off-black: rgba(0, 0, 0, 0.87) !default;
 // Header Styles
 $h1-fontsize: 4.2rem !default;
