--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
   <title>{{ site.title }}</title>
 
   <!-- CSS  -->
-	
+
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
@@ -17,8 +17,24 @@
 
   {{ content }}
   <!--  Scripts-->
+
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/bin/materialize.js"></script>
   <script src="js/bin/init.js"></script>
+	<script src="js/bin/scroll.js"></script>
+	<script>
+	  function initMap() {
+	    var uluru = {lat: -25.363, lng: 131.044};
+	    var map = new google.maps.Map(document.getElementById('map'), {
+	      zoom: 4,
+	      center: uluru
+	    });
+	    var marker = new google.maps.Marker({
+	      position: uluru,
+	      map: map
+	    });
+	  }
+	</script>
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQan37RiD5MVW_KntyinKbOp6wstRHV74&callback=initMap"></script>
   </body>
 </html>
