--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,32 +1,35 @@
 ---
 layout: default
 ---
-<div class="navbar-fixed">
+<section class="navbar-fixed">
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
       <a id="logo-container" href="#" class="brand-logo"><img src="img/logo.png" alt=""></a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">Amenities</a></li>
-        <li><a href="#">Availability</a></li>
-        <li><a href="#">Pricing</a></li>
-        <li><a href="#">Lifestyle</a></li>
-        <li><a href="#">Location</a></li>
+        <li><a href="#amenities">Amenities</a></li>
+        <li><a href="#availability">Availability</a></li>
+        <li><a href="#pricing">Pricing</a></li>
+        <li><a href="#lifestyle">Lifestyle</a></li>
+        <li><a href="#location">Location</a></li>
         <li><a href="#">Pictures</a></li>
         <li><a href="#">FAQ</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#">Contact Us</a></li>
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
-        <li><a href="#">Amenities</a></li>
-        <li><a href="#">Pricing</a></li>
-        <li><a href="#">Lifestyle</a></li>
+        <li><a href="#amenities">Amenities</a></li>
+        <li><a href="#availability">Availability</a></li>
+        <li><a href="#pricing">Pricing</a></li>
+        <li><a href="#lifestyle">Lifestyle</a></li>
+        <li><a href="#location">Location</a></li>
+        <li><a href="#">Pictures</a></li>
         <li><a href="#">FAQ</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#">Contact Us</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
   </nav>
-</div>
+</section>
 <div class="important-header valign-wrapper center">
   <p>One suite available!</p>
 </div>
@@ -50,13 +53,12 @@ layout: default
   <div class="parallax"><img src="img/background1.jpg" alt="Unsplashed background img 1"></div>
 </section>
 
-
 <section class="container">
   <div class="section">
 
     <!--   Icon Section   -->
     <div class="row">
-      <div class="col s12 m4">
+      <div class="col s12 m4" id="amenities">
         <div class="icon-block">
           <h2 class="center"><i class="material-icons">done_all</i></h2>
           <h5 class="center">Amenities</h5>
@@ -64,13 +66,16 @@ layout: default
             <li><i class="material-icons">done</i> Pet Friendly</li>
             <li><i class="material-icons">done</i> Attached Garages</li>
             <li><i class="material-icons">done</i> Single Story</li>
+            <li><i class="material-icons">done</i> Low Density Housing</li>
             <li><i class="material-icons">done</i> Spacious Design</li>
             <li><i class="material-icons">done</i> Modern Kitchen</li>
+            <li><i class="material-icons">done</i> Excellent Craftsmanship</li>
+            <li><i class="material-icons">done</i> Energy Efficient</li>
           </ul>
         </div>
       </div>
 
-      <div class="col s12 m4">
+      <div class="col s12 m4" id="availability">
         <div class="icon-block">
           <h2 class="center"><i class="material-icons">group</i></h2>
           <h5 class="center">Availability</h5>
@@ -78,7 +83,7 @@ layout: default
         </div>
       </div>
 
-      <div class="col s12 m4">
+      <div class="col s12 m4" id="pricing">
         <div class="icon-block">
           <h2 class="center"><i class="material-icons">attach_money</i></h2>
           <h5 class="center">Pricing</h5>
@@ -90,48 +95,50 @@ layout: default
   </div>
 </section>
 
-
 <section class="parallax-container valign-wrapper">
   <div class="section no-pad-bot">
     <div class="container">
       <div class="row center">
-        <h5 class="header col s12 light">The most luxurious apartment complex in Corning, Bigflat, Elmira, and Horseheads.</h5>
+        <h5 class="header col s12 light">The most luxurious apartment complex in Corning, Bigflat, Elmira, and Horseheads. or Testimonials</h5>
       </div>
     </div>
   </div>
   <div class="parallax"><img src="img/background1.jpg" alt="Unsplashed background img 2"></div>
 </section>
 
-<div class="container">
+<section class="container">
   <div class="section">
 
     <div class="row">
-      <div class="col s12 center">
+      <div class="col s12 center" id="lifestyle">
         <h3><i class="mdi-content-send brown-text"></i></h3>
-        <h4>Information</h4>
-        <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+        <h4>Lifestyle</h4>
+        <p class="left-align light">The Fairport Ridge lifestyle is all about freedom and luxury. You'll have the freedom to enjoy your apartment home as well as your hobbies and interests because you won't be saddled with all the responsibilities of home ownership. The hassles of maintaining the grass and landscaping, cleaning the gutters, repairing appliances, or shoveling the snow are all gone. Pursue what you love to do and leave the hassles up to us!</div>
     </div>
 
   </div>
-</div>
+</section>
 
-
-<div class="parallax-container valign-wrapper">
+<section class="parallax-container valign-wrapper">
   <div class="section no-pad-bot">
     <div class="container">
       <div class="row center">
-        <h5 class="header col s12 light">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h5>
+        <h5 class="header col s12 light">Testimonials</h5>
       </div>
     </div>
   </div>
   <div class="parallax"><img src="img/background1.jpg" alt="Unsplashed background img 3"></div>
-</div>
+</section>
+
+<section id="location">
+  <div id="map"></div>
+</section>
 
 <footer class="page-footer teal">
 
   <div class="footer-copyright">
     <div class="container">
-      Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a> taken by Robert Craig
+
     </div>
   </div>
 </footer>
