--- a/css/materialize.css
+++ b/css/materialize.css
@@ -2602,3 +2602,5 @@ nav { height: 72px; padding: 4px 0; }
 
 .important-header { display: flex; justify-content: center; align-items: center; width: 100%; background-color: #b55063; height: 48px; }
 .important-header p { margin: 0; }
+
+#map { width: 100%; height: 420px; }
