--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,19 +22,9 @@
   <script src="js/bin/materialize.js"></script>
   <script src="js/bin/init.js"></script>
 	<script src="js/bin/scroll.js"></script>
-	<script>
-	  function initMap() {
-	    var uluru = {lat: -25.363, lng: 131.044};
-	    var map = new google.maps.Map(document.getElementById('map'), {
-	      zoom: 4,
-	      center: uluru
-	    });
-	    var marker = new google.maps.Marker({
-	      position: uluru,
-	      map: map
-	    });
-	  }
-	</script>
+	<!--
+	<script src="js/bin/map.js"></script>
 	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQan37RiD5MVW_KntyinKbOp6wstRHV74&callback=initMap"></script>
-  </body>
+-->
+	</body>
 </html>
