--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <section class="navbar-fixed">
   <nav class="white" role="navigation">
-    <div class="nav-wrapper container">
+    <div class="nav-wrapper">
       <a id="logo-container" href="#" class="brand-logo"><img src="img/logo.png" alt=""></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#amenities">Amenities</a></li>
@@ -99,7 +99,7 @@ layout: default
   <div class="section no-pad-bot">
     <div class="container">
       <div class="row center">
-        <h5 class="header col s12 light">The most luxurious apartment complex in Corning, Bigflat, Elmira, and Horseheads. or Testimonials</h5>
+        <h5 class="header col s12 light">The most luxurious apartment complex in Corning, Big Flats, Elmira, and Horseheads.</h5>
       </div>
     </div>
   </div>
@@ -131,7 +131,7 @@ layout: default
 </section>
 
 <section id="location">
-  <div id="map"></div>
+  <iframe id="map" src="https://snazzymaps.com/embed/43026"></iframe>
 </section>
 
 <footer class="page-footer teal">
