--- a/css/materialize.css
+++ b/css/materialize.css
@@ -2580,13 +2580,6 @@ p { line-height: 2rem; }
 .parallax-container { min-height: 380px; line-height: 0; height: auto; color: rgba(255, 255, 255, 0.9); }
 .parallax-container .section { width: 100%; }
 
-/*
-@media only screen and (max-width : 992px) { .parallax-container .section { position: absolute; top: 40%; } #index-banner .section { top: 10%; }
-}
-
-@media only screen and (max-width : 600px) { #index-banner .section { top: 0; }
-}
-*/
 .icon-block { padding: 0 15px; }
 .icon-block .material-icons { font-size: inherit; }
 
@@ -2603,4 +2596,7 @@ nav { height: 72px; padding: 4px 0; }
 .important-header { display: flex; justify-content: center; align-items: center; width: 100%; background-color: #b55063; height: 48px; }
 .important-header p { margin: 0; }
 
-#map { width: 100%; height: 420px; }
+#map { width: 100%; height: 600px; border: none; }
+
+.nav-wrapper { margin: 0 auto; width: 100%; }
+@media only screen and (min-width: 1100px) { .nav-wrapper { width: 90%; } }
