--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -20,23 +20,7 @@ p {
     width: 100%;
   }
 }
-/*
-@media only screen and (max-width : 992px) {
-  .parallax-container .section {
-    position: absolute;
-    top: 40%;
-  }
-  #index-banner .section {
-    top: 10%;
-  }
-}
 
-@media only screen and (max-width : 600px) {
-  #index-banner .section {
-    top: 0;
-  }
-}
-*/
 .icon-block {
   padding: 0 15px;
   .material-icons {
@@ -91,5 +75,14 @@ nav {
 
 #map {
   width: 100%;
-  height: 420px;
+  height: 600px;
+  border: none;
+}
+
+.nav-wrapper {
+  margin: 0 auto;
+  width: 100%;
+  @media only screen and (min-width: 1100px) {
+    width: 90%;
+  }
 }
