--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,10 +21,7 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/bin/materialize.js"></script>
   <script src="js/bin/init.js"></script>
-	<script src="js/bin/scroll.js"></script>
-	<!--
 	<script src="js/bin/map.js"></script>
-	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQan37RiD5MVW_KntyinKbOp6wstRHV74&callback=initMap"></script>
--->
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABJZeM9SBHnk0w2ie-DDm173UyKkOPsGk&libraries=places&callback=initMap"></script>
 	</body>
 </html>
