--- a/css/materialize.css
+++ b/css/materialize.css
@@ -2596,7 +2596,9 @@ nav { height: 72px; padding: 4px 0; }
 .important-header { display: flex; justify-content: center; align-items: center; width: 100%; background-color: #b55063; height: 48px; }
 .important-header p { margin: 0; }
 
-#map { width: 100%; height: 600px; border: none; }
+#map { width: 100%; height: 60vh; border: none; }
 
 .nav-wrapper { margin: 0 auto; width: 100%; }
 @media only screen and (min-width: 1100px) { .nav-wrapper { width: 90%; } }
+
+.anchor { padding-top: 92px; }
