--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -75,7 +75,7 @@ nav {
 
 #map {
   width: 100%;
-  height: 600px;
+  height: 60vh;
   border: none;
 }
 
@@ -85,4 +85,8 @@ nav {
   @media only screen and (min-width: 1100px) {
     width: 90%;
   }
+}
+
+.anchor {
+  padding-top: 92px;
 }
