--- a/_includes/map.html
+++ b/_includes/map.html
@@ -1,2 +1,30 @@
 <!-- <iframe id="map" src="https://snazzymaps.com/embed/43358"></iframe> -->
 <div id="map"></div>
+<div id="placesDiv">
+  <div id="placesUI">
+    <label>
+      <input name="places" value="restaurants" type="radio" class="red-rad" />
+      <span>Restaurants</span>
+    </label>
+    <label>
+      <input name="places" value="schools" type="radio" class="yellow-rad" />
+      <span>Schools</span>
+    </label>
+    <label>
+      <input name="places" value="golf-course" type="radio" class="green-rad" />
+      <span>Golf Courses</span>
+    </label>
+    <label>
+      <input name="places" value="grocery_store" type="radio" class="cyan-rad" />
+      <span>Grocery Stores</span>
+    </label>
+    <label>
+      <input name="places" value="hospitals" type="radio" class="blue-rad"  />
+      <span>Hospitals</span>
+    </label>
+    <label>
+      <input name="places" value="all" type="radio" checked class="black-rad" />
+      <span>All</span>
+    </label>
+  </div>
+</div>
