--- a/_includes/map.html
+++ b/_includes/map.html
@@ -26,5 +26,11 @@
       <input name="places" value="all" type="radio" checked class="black-rad" />
       <span>All</span>
     </label>
+    <label id="map-input-label">
+      <!-- <input name="places" value="input" type="radio" class="white-rad" />
+      <span> -->
+        <input id="map-input" placeholder="Search" type="text">
+      <!-- </span> -->
+    </label>
   </div>
 </div>
