--- a/_includes/map.html
+++ b/_includes/map.html
@@ -1,36 +1,11 @@
 <!-- <iframe id="map" src="https://snazzymaps.com/embed/43358"></iframe> -->
 <div id="map"></div>
-<div id="placesDiv">
-  <div id="placesUI">
-    <label>
-      <input name="places" value="restaurants" type="radio" class="red-rad" />
-      <span>Restaurants</span>
-    </label>
-    <label>
-      <input name="places" value="schools" type="radio" class="yellow-rad" />
-      <span>Schools</span>
-    </label>
-    <label>
-      <input name="places" value="golf-course" type="radio" class="green-rad" />
-      <span>Golf Courses</span>
-    </label>
-    <label>
-      <input name="places" value="grocery_store" type="radio" class="cyan-rad" />
-      <span>Grocery Stores</span>
-    </label>
-    <label>
-      <input name="places" value="hospitals" type="radio" class="blue-rad"  />
-      <span>Hospitals</span>
-    </label>
-    <label>
-      <input name="places" value="all" type="radio" checked class="black-rad" />
-      <span>All</span>
-    </label>
-    <label id="map-input-label">
-      <!-- <input name="places" value="input" type="radio" class="white-rad" />
-      <span> -->
-        <input id="map-input" placeholder="Search" type="text">
-      <!-- </span> -->
-    </label>
+<div id="left-panel">
+  <div class="row">
+    <div class="input-field col s12">
+      <input placeholder="Restaurants" id="map-search" type="text" class="validate">
+      <label for="map-search">Search</label>
+      <a class="btn waves-effect" id="search-btn"><i class="material-icons">search</i></a>
+    </div>
   </div>
 </div>
