finshed map, added video

--- a/_includes/map.html
+++ b/_includes/map.html
@@ -1,11 +1,11 @@
 <!-- <iframe id="map" src="https://snazzymaps.com/embed/43358"></iframe> -->
 <div id="map"></div>
 <div id="left-panel">
-  <div class="row">
-    <div class="input-field col s12">
-      <input placeholder="Restaurants" id="map-search" type="text" class="validate">
-      <label for="map-search">Search</label>
+  <!-- <div class="row"> -->
+    <div class="input-field">
+      <input placeholder="E.g. Restaurants" id="map-search" type="text" class="validate">
+      <label for="map-search">Search Local Establishments</label>
       <a class="btn waves-effect" id="search-btn"><i class="material-icons">search</i></a>
     </div>
-  </div>
+  <!-- </div> -->
 </div>
