--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
 
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/bin/materialize.js"></script>
+	<script src="js/bin/video.js"></script>
   <script src="js/bin/init.js"></script>
 	<script src="js/bin/map.js"></script>
 	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABJZeM9SBHnk0w2ie-DDm173UyKkOPsGk&libraries=places&callback=initMap"></script>
