--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,9 +30,32 @@ layout: default
     </div>
   </nav>
 </section>
+
 <div class="important-header valign-wrapper center">
   <p>One suite available!</p>
 </div>
+<!--
+<section id="index-banner" class="parallax-container valign-wrapper">
+  <div class="section no-pad-bot">
+    <div class="container center">
+      <a href="#" class="logo-header"><img src="img/logo.png" alt=""></a>
+
+      <br><br>
+      <h1 class="header center teal-text text-lighten-2">Design 2</h1>
+      <div class="row center">
+        <h5 class="header col s12 light">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</h5>
+      </div>
+      <div class="row center">
+        <a href="#" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Apply Now</a>
+      </div>
+      <br><br>
+
+    </div>
+  </div>
+  <div class="parallax"><img src="img/background1.jpg" alt="Unsplashed background img 1"></div>
+</section>-->
+
+
 <section id="index-banner" class="parallax-container valign-wrapper">
   <div class="section no-pad-bot">
     <div class="container center">
@@ -50,8 +73,21 @@ layout: default
     -->
     </div>
   </div>
-  <div class="parallax"><img src="img/background1.jpg" alt="Unsplashed background img 1"></div>
+  <div class="homepage-hero-module parallax">
+    <div class="video-container">
+      <div class="filter"></div>
+      <video autoplay loop class="fillWidth">
+        <source src="img/Up.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
+        <source src="img/Up.webm" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
+      </video>
+      <div class="poster hidden">
+        <img src="Up.jpg" alt="">
+      </div>
+    </div>
+  </div>
 </section>
+
+
 
 <section class="container">
   <div class="section">
