--- a/css/materialize.css
+++ b/css/materialize.css
@@ -2583,6 +2583,8 @@ p { line-height: 2rem; }
 .icon-block { padding: 0 15px; }
 .icon-block .material-icons { font-size: inherit; }
 
+#index-banner { min-height: 85vh; }
+
 .parallax img { min-height: 100%; min-width: 100%; }
 
 .navbar-fixed { height: 72px; }
@@ -2603,8 +2605,24 @@ nav { height: 72px; padding: 4px 0; }
 
 .anchor { padding-top: 92px; }
 
-#left-panel { z-index: 1; height: 100%; width: 15rem; background-color: rgba(0, 0, 0, 0.6); }
+#left-panel { z-index: 1; height: auto; width: 17rem; background-color: rgba(0, 0, 0, 0.6); padding: 0 1rem; }
 
 #map-search { height: 2.5rem; width: 85%; font: 400 1rem Roboto, Arial, sans-serif; }
 
 #search-btn { padding: 0 5px; }
+
+.homepage-hero-module { border-right: none; border-left: none; position: relative; }
+
+.no-video .video-container video, .touch .video-container video { display: none; }
+
+.no-video .video-container .poster, .touch .video-container .poster { display: block !important; }
+
+.video-container { position: relative; bottom: 0%; left: 0%; height: 100%; width: 100%; overflow: hidden; background: #000; }
+
+.video-container .poster img { width: 100%; bottom: 0; position: absolute; }
+
+.video-container .filter { z-index: 100; position: absolute; background: rgba(0, 0, 0, 0.4); width: 100%; }
+
+.video-container video { position: absolute; z-index: 0; bottom: 0; }
+
+.video-container video.fillWidth { width: 100%; }
