--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,7 +26,7 @@ layout: default
         <li><a href="#">FAQ</a></li>
         <li><a href="#">Contact Us</a></li>
       </ul>
-      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons light-blue-text text-accent-4">menu</i></a>
     </div>
   </nav>
 </section>
@@ -34,60 +34,26 @@ layout: default
 <div class="important-header valign-wrapper center">
   <p>One suite available!</p>
 </div>
-<!--
-<section id="index-banner" class="parallax-container valign-wrapper">
-  <div class="section no-pad-bot">
-    <div class="container center">
-      <a href="#" class="logo-header"><img src="img/logo.png" alt=""></a>
 
-      <br><br>
-      <h1 class="header center teal-text text-lighten-2">Design 2</h1>
-      <div class="row center">
-        <h5 class="header col s12 light">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</h5>
+<section class="homepage-hero-module">
+  <div class="video-container">
+    <div class="video-overlay valign-wrapper">
+      <div class="container">
+        <a href="#" class="logo-header"><img src="img/logo.png" alt=""></a>
+        <div class="row center">
+          <a href="#" id="header-btn" class="btn-large waves-effect waves-light light-blue accent-4">Book a Visit</a>
+        </div>
       </div>
-      <div class="row center">
-        <a href="#" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Apply Now</a>
-      </div>
-      <br><br>
-
     </div>
-  </div>
-  <div class="parallax"><img src="img/background1.jpg" alt="Unsplashed background img 1"></div>
-</section>-->
-
-
-<section id="index-banner" class="parallax-container valign-wrapper">
-  <div class="section no-pad-bot">
-    <div class="container center">
-      <a href="#" class="logo-header"><img src="img/logo.png" alt=""></a>
-      <!--
-      <br><br>
-      <h1 class="header center teal-text text-lighten-2">Design 2</h1>
-      <div class="row center">
-        <h5 class="header col s12 light">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</h5>
-      </div>
-      <div class="row center">
-        <a href="#" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Apply Now</a>
-      </div>
-      <br><br>
-    -->
-    </div>
-  </div>
-  <div class="homepage-hero-module parallax">
-    <div class="video-container">
-      <div class="filter"></div>
-      <video autoplay loop class="fillWidth">
-        <source src="img/Up.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
-        <source src="img/Up.webm" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
-      </video>
-      <div class="poster hidden">
-        <img src="Up.jpg" alt="">
-      </div>
+    <video autoplay loop class="fillWidth">
+      <source src="img/Up.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
+      <source src="img/Up.webm" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
+    </video>
+    <div class="poster hidden">
+      <img src="Up.jpg" alt="">
     </div>
   </div>
 </section>
-
-
 
 <section class="container">
   <div class="section">
@@ -147,8 +113,7 @@ layout: default
 
     <div class="row">
       <div class="col s12 center">
-        <h3><i class="mdi-content-send brown-text"></i></h3>
-        <h4><a id="lifestyle" class="anchor">Lifestyle</a></h4>
+        <h3><a id="lifestyle" class="anchor">Lifestyle</a></h3>
         <p class="left-align light">The Fairport Ridge lifestyle is all about freedom and luxury. You'll have the freedom to enjoy your apartment home as well as your hobbies and interests because you won't be saddled with all the responsibilities of home ownership. The hassles of maintaining the grass and landscaping, cleaning the gutters, repairing appliances, or shoveling the snow are all gone. Pursue what you love to do and leave the hassles up to us!</p>
       </div>
       </div>
@@ -156,7 +121,7 @@ layout: default
   </div>
 </section>
 
-<section class="parallax-container valign-wrapper">
+<!-- <section class="parallax-container valign-wrapper">
   <div class="section no-pad-bot">
     <div class="container">
       <div class="row center">
@@ -165,7 +130,32 @@ layout: default
     </div>
   </div>
   <div class="parallax"><img src="img/background1.jpg" alt="Unsplashed background img 3"></div>
-</section>
+</section> -->
+<div>
+  <!-- STOPPED HERE......BELOW MIGHT NOT BE NEEDED, POSSIBLY A BETTER WAY TO DO THINGS -->
+  <h3 id="testimonial-header"><a id="testimonials" class="anchor">Testimonials</a></h3>
+  <div class="carousel carousel-slider center">
+    <div class="carousel-fixed-item center">
+      <a class="btn waves-effect white grey-text darken-text-2">button</a>
+    </div>
+    <div class="carousel-item blue white-text" href="#one!">
+      <h2>First Panel</h2>
+      <p class="white-text">This is your first panel</p>
+    </div>
+    <div class="carousel-item blue white-text" href="#two!">
+      <h2>Second Panel</h2>
+      <p class="white-text">This is your second panel</p>
+    </div>
+    <div class="carousel-item blue white-text" href="#three!">
+      <h2>Third Panel</h2>
+      <p class="white-text">This is your third panel</p>
+    </div>
+    <div class="carousel-item blue white-text" href="#four!">
+      <h2>Fourth Panel</h2>
+      <p class="white-text">This is your fourth panel</p>
+    </div>
+  </div>
+</div>
 
 <section id="location">
   {% include map.html %}
