--- a/css/materialize.css
+++ b/css/materialize.css
@@ -2583,7 +2583,7 @@ p { line-height: 2rem; }
 .icon-block { padding: 0 15px; }
 .icon-block .material-icons { font-size: inherit; }
 
-#index-banner { min-height: 85vh; }
+#header-btn { margin-top: 32px; }
 
 .parallax img { min-height: 100%; min-width: 100%; }
 
@@ -2611,18 +2611,19 @@ nav { height: 72px; padding: 4px 0; }
 
 #search-btn { padding: 0 5px; }
 
-.homepage-hero-module { border-right: none; border-left: none; position: relative; }
+.video-overlay { position: absolute; width: 100%; text-align: center; height: 100%; }
+
+#testimonial-header { position: absolute; z-index: 1; left: 0; right: 0; text-align: center; }
+#testimonial-header a { color: #fff; }
+
+.homepage-hero-module { border-right: none; border-left: none; position: relative; height: calc(100vh - 120px); overflow: hidden; }
 
 .no-video .video-container video, .touch .video-container video { display: none; }
 
 .no-video .video-container .poster, .touch .video-container .poster { display: block !important; }
 
-.video-container { position: relative; bottom: 0%; left: 0%; height: 100%; width: 100%; overflow: hidden; background: #000; }
-
+.video-container { position: initial; bottom: 0%; left: 0%; height: 100%; width: 100%; overflow: hidden; background: rgba(255, 255, 255, 0.3); }
 .video-container .poster img { width: 100%; bottom: 0; position: absolute; }
-
-.video-container .filter { z-index: 100; position: absolute; background: rgba(0, 0, 0, 0.4); width: 100%; }
-
-.video-container video { position: absolute; z-index: 0; bottom: 0; }
-
-.video-container video.fillWidth { width: 100%; }
+.video-container .filter { z-index: 100; position: absolute; background: transparent; width: 100%; }
+.video-container video { position: absolute; z-index: -1; bottom: 0; }
+.video-container video.fillWidth { min-height: 100%; }
