--- a/sass/_video.scss
+++ b/sass/_video.scss
@@ -2,6 +2,8 @@
     border-right: none;
     border-left: none;
     position: relative;
+    height: calc(100vh - 120px);
+    overflow: hidden;
 }
 .no-video .video-container video,
 .touch .video-container video {
@@ -12,30 +14,30 @@
     display: block !important;
 }
 .video-container {
-    position: relative;
+    position: initial;
     bottom: 0%;
     left: 0%;
     height: 100%;
     width: 100%;
     overflow: hidden;
-    background: #000;
-}
-.video-container .poster img {
-    width: 100%;
-    bottom: 0;
-    position: absolute;
-}
-.video-container .filter {
-    z-index: 100;
-    position: absolute;
-    background: rgba(0, 0, 0, 0.4);
-    width: 100%;
-}
-.video-container video {
-    position: absolute;
-    z-index: 0;
-    bottom: 0;
-}
-.video-container video.fillWidth {
-    width: 100%;
-}
+    background: rgba(255,255,255,0.3);
+    .poster img {
+        width: 100%;
+        bottom: 0;
+        position: absolute;
+    }
+    .filter {
+        z-index: 100;
+        position: absolute;
+        background: rgba(0, 0, 0, 0);
+        width: 100%;
+    }
+    video {
+        position: absolute;
+        z-index: -1;
+        bottom: 0;
+    }
+    video.fillWidth {
+        min-height: 100%;
+    }
+  }
