worked on testimonials

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -113,7 +113,7 @@ layout: default
 
     <div class="row">
       <div class="col s12 center">
-        <h3><a id="lifestyle" class="anchor">Lifestyle</a></h3>
+        <h4><a id="lifestyle" class="anchor">Lifestyle</a></h4>
         <p class="left-align light">The Fairport Ridge lifestyle is all about freedom and luxury. You'll have the freedom to enjoy your apartment home as well as your hobbies and interests because you won't be saddled with all the responsibilities of home ownership. The hassles of maintaining the grass and landscaping, cleaning the gutters, repairing appliances, or shoveling the snow are all gone. Pursue what you love to do and leave the hassles up to us!</p>
       </div>
       </div>
@@ -133,14 +133,13 @@ layout: default
 </section> -->
 <div>
   <!-- STOPPED HERE......BELOW MIGHT NOT BE NEEDED, POSSIBLY A BETTER WAY TO DO THINGS -->
-  <h3 id="testimonial-header"><a id="testimonials" class="anchor">Testimonials</a></h3>
   <div class="carousel carousel-slider center">
     <div class="carousel-fixed-item center">
       <a class="btn waves-effect white grey-text darken-text-2">button</a>
     </div>
     <div class="carousel-item blue white-text" href="#one!">
-      <h2>First Panel</h2>
-      <p class="white-text">This is your first panel</p>
+      <h2><i class="material-icons">format_quote</i></h2>
+      <p class="white-text">My lady, Kathy, and I moved into our home in Strawberry Flats over 8 years ago. It was the best move we made in our 50 years of marriage – and it was number 13! Kathy passed last year, but we both loved living here and I have no plans to leave. The quality of our home, the ease of living (no maintenance work for me!), the location, the neighbors, are all big pluses; and with the Mosso’s as our caretakers – life here is good. After living in three other apartment complexes in this area, I speak from experience – Strawberry Flats is the best by far.</p>
     </div>
     <div class="carousel-item blue white-text" href="#two!">
       <h2>Second Panel</h2>
