--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,12 +11,12 @@
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+	<!-- <link href="css/animate.css" type="text/css" rel="stylesheet" media="screen,projection"/> -->
 </head>
 <body>
 
   {{ content }}
   <!--  Scripts-->
-
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/bin/materialize.js"></script>
 	<script src="js/bin/video.js"></script>
